[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0" }
actix-ws = "0.3.0"
actix-files = "0.6.6"
actix-rt = "2.5.0"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
rusqlite = "0.32.1"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4"] }
dashmap = "6.1.0"
tokio = {  version = "1.39.3", features = ["full"] }
bytes = "1.7.1"
rand = "0.8.5"
tracing = "0.1.40"
anyhow = "1.0.91"
tokio-util = "0.7.11"
regex = "1.10.6"
tracing-subscriber = "0.3.18"
